src/lib/testcases/fails/dupl_fun_decl/main.rk
foo: a, b = a + b
foo: a = a + 2

main: -> foo 2, 5